tests/fail/elaboration/mismatched-array-length/array16.snap
stdout = ''
stderr = '''
error: mismatched array length
  ┌─ tests/fail/elaboration/mismatched-array-length/array16.fathom:3:1
  │
3 │ [34] : Array16 0 U32
  │ ^^^^ found length: 1

'''
